# semantic-search

./: README.md  pyproject.toml
data/rss_feed_resources/: public_fr.jsonl  vsd_fr.jsonl
semantic_search/: crawler.py  index.py  search.py  utils.py
tests/: test_crawler.py  test_index.py  test_search.py
