[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = ["Lara Perinetti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.11"
click = "^8.1.7"
loguru = "^0.7.2"
milvus-model = "^0.2.10"
pymilvus = "^2.5.0"
gradio = "^5.7.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
